--- a/src/02components/Lists/ClienteList/ClienteList.css
+++ b/src/02components/Lists/ClienteList/ClienteList.css
@@ -1,12 +1,10 @@
 .list-container{
-    display:flex;
-    justify-content:center;
     color: #666;
     max-width: 80%;
     margin:auto;
-    min-height:100vh;
-    padding-top: 100px;
-    padding-left: 25px;
+    min-height: 80vh;
+    padding-top: 50px;
+    /* padding-left: 25px; */
     /* background-color: #8e8e8e; */
     
 }
@@ -14,7 +12,7 @@
     display: flex;
     justify-content:center;
     width: 80%;
-    margin: 15px auto;
+    margin: 0px auto;
     
 }
 
