--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Imprima&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
+*{
+    box-sizing: border-box;
+}
 
 #myButton{
     background-color: red;
